    fault). (Christoph M. Becker)
  . Fixed bug #69781 (phpinfo() reports Professional Editions of Windows
    7/8/8.1/10 as "Business"). (Christian Wenz)
  . Fixed bug #69835 (phpinfo() does not report many Windows SKUs).
    (Christian Wenz)
  . Fixed bug #69889 (Null coalesce operator doesn't work for string offsets).
    (Nikita)
  . Fixed bug #69892 (Different arrays compare indentical due to integer key
    truncation). (Nikita)
  . Fixed bug #69893 (Strict comparison between integer and empty string keys
    crashes). (Nikita)

- DOM:
  . Fixed bug #69846 (Segmenation fault (access violation) when iterating over
    DOMNodeList). (Anatol Belski)

- GD:
  . Fixed bug #61221 (imagegammacorrect function loses alpha channel). (cmb)

- mysqlnd:
  . Fixed Bug #69796 (mysqli_stmt::fetch doesn't assign null values to
    bound variables). (Laruence)

- Curl:
  . Fixed bug #69831 (Segmentation fault in curl_getinfo). (im dot denisenko at
    yahoo dot com)

- Opcache:
  . Removed opcache.load_comments configuration directive. Now doc comments
    loading costs nothing and always enabled. (Dmitry)
  . Fixed bug #69838 (Wrong size calculation for function table). (Anatol)

- PDO_pgsql:
  . Fixed bug #69752 (PDOStatement::execute() leaks memory with DML
    Statements when closeCuror() is u). (Philip Hofstetter)

- SPL
  . Fixed bug #69845 (ArrayObject with ARRAY_AS_PROPS broken). (Dmitry)

- Standard
  . Fixed bug #62922 (Truncating entire string should result in string).
    (Nikita)

11 Jun 2015, PHP 7.0.0 Alpha 1

- Core:
  . Fixed bug #69767 (Default parameter value with wrong type segfaults).
    (cmb, Laruence)
  . Fixed bug #69756 (Fatal error: Nesting level too deep - recursive dependency
    ? with ===). (Dmitry, Laruence)
  . Fixed bug #69758 (Item added to array not being removed by array_pop/shift
    ). (Laruence)
  . Fixed bug #68475 (Add support for $callable() sytnax with 'Class::method').
    (Julien, Aaron Piotrowski)